# vslam_lecture

./: .gitmodules  Dockerfile  README.md
1_3/: CMakeLists.txt  Dockerfile  README.md
1_3/examples/: map.cpp  unordered_map.cpp  while_loop.cpp
2_4/: CMakeLists.txt  Dockerfile  README.md
2_4/examples/: eigen.cpp  rotations.cpp
2_7/: Dockerfile  README.md
3_10/examples/: triangulation.cpp
3_2/: CMakeLists.txt  Dockerfile  README.md
3_2/examples/: detect_feature.cpp
3_4/: CMakeLists.txt  Dockerfile  README.md
3_4/examples/: match_bow.cpp
basalt_monado/: CMakeLists.txt  Dockerfile  README.md  tutorial.md
basalt_monado/docker/: ubuntu2204.Dockerfile  ubuntu2404.Dockerfile
basalt_monado/include/basalt/linearization/: landmark_block.hpp  landmark_block_abs_dynamic.hpp
basalt_monado/include/basalt/optical_flow/: frame_to_frame_optical_flow.h  multiscale_frame_to_frame_optical_flow.h  optical_flow.h  patch_optical_flow.h
basalt_monado/include/basalt/utils/: imu_types.h
basalt_monado/include/basalt/vi_estimator/: marg_helper.h
basalt_monado/scripts/: .cmake-format.json  format.sh
basalt_monado/src/: vio.cpp
basalt_monado/src/calibration/: vignette.cpp
basalt_monado/src/utils/: keypoints.cpp
basalt_monado/src/vi_estimator/: sqrt_keypoint_vio.cpp
basalt_monado/test/: CMakeLists.txt
